--- a/stereotype.cfg
+++ b/stereotype.cfg
@@ -17,7 +17,7 @@ map1
   ...
 }
 
-# List can be map list, value list and list list.
+# A list can either be a map list, a value list and a list list.
 # Elements of list should be anonymous (not key specified).
 mapList1
 [
