--- a/test/config.cfg
+++ b/test/config.cfg
@@ -15,6 +15,28 @@ string-list
   "value 4"
 ]
 
+list-list
+[
+  [
+    {
+    }
+    {
+    }
+  ]
+  [
+    "abc"
+    "def"
+  ]
+  [
+    [
+    ]
+    [
+    ]
+    [
+    ]
+  ]
+]
+
 escaped1 "\""
 escaped2 "\\"
 # escaped3 "\/" no need to escape forward slash '/'
