--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fly.dream</groupId>
-    <artifactId>cfg</artifactId>
-    <version>2</version>
+    <artifactId>cfg-2</artifactId>
+    <version>1</version>
 
     <properties>
         <java.version>10</java.version>
